added feature to show challenges and wired up the readouts to $/date

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>SPENT</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -76,6 +76,8 @@
         <script src="scripts/services/eventBusService.js"></script>
         <script src="scripts/services/gameStateService.js"></script>
         <script src="scripts/services/dayDataService.js"></script>
+        <script src="scripts/services/challengeService.js"></script>
+        <script src="scripts/services/optionService.js"></script>
         <!-- endbuild -->
         
 </body>
